Quorum3/Library/Tests/TypeChecker/Pass/TextGetSubtext.quorum
class Main
    action Main
        Text t 
        t:SetValue("hello")
        text p = "hello"

        output t:GetSubtext(2)
        output p:GetSubtext(2)
    end
end