Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignNumObjTextObjWrapped.quorum
class main
    action Main
        Text t
        t:setValue("text")
        Number num = t
    end
end